Finished sidebar, whole project finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styling/reset.css">
     <link rel="stylesheet" href="./styling/header.css">
     <link rel="stylesheet" href="./styling/body.css">
+    <link rel="stylesheet" href="./styling/sidebar.css">
     <title>Youtube Clone</title>
 </head>
 <body>
@@ -350,7 +351,300 @@
         </main>
 
         <aside class="sidebar">
-            <section></section>
+            <div class="sidebar__top">
+                <div id="UpNext">Up next</div>
+                <div id="Autoplay">AUTOPLAY</div>
+                <div class="autoplay-toggle">
+                    <input type="checkbox" id="toggle">
+                    <label for="toggle"></label>
+                </div>
+            </div>
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel1.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">1 HOUR RELAXING PIANO \\ Studying and Relaxation \\...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Jacob's Piano</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">3.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="bottom-borderline"></div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel2.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">2 Hour Beautiful Piano Music for Studying and Sleeping...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">The Soul of Wind</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">43M views</div>
+                        <div>•</div>
+                        <div class="songDate">3 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel3.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Beautiful Piano Music, Vol. 1 ~ Relaxing Music for Studying,...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Soothing Relaxation</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">58M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel4.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Peder B. Helland - Bright Future [Full Album]</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Peder B. Helland</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.9M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel5.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">BEAUTIFUL PIANO MUSIC | Emotional & Relaxing Music</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Epic Music World</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel1.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">1 HOUR RELAXING PIANO \\ Studying and Relaxation \\...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Jacob's Piano</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">3.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel2.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">2 Hour Beautiful Piano Music for Studying and Sleeping...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">The Soul of Wind</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">43M views</div>
+                        <div>•</div>
+                        <div class="songDate">3 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel3.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Beautiful Piano Music, Vol. 1 ~ Relaxing Music for Studying,...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Soothing Relaxation</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">58M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel4.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Peder B. Helland - Bright Future [Full Album]</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Peder B. Helland</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.9M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel5.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">BEAUTIFUL PIANO MUSIC | Emotional & Relaxing Music</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Epic Music World</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel1.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">1 HOUR RELAXING PIANO \\ Studying and Relaxation \\...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Jacob's Piano</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">3.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel2.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">2 Hour Beautiful Piano Music for Studying and Sleeping...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">The Soul of Wind</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">43M views</div>
+                        <div>•</div>
+                        <div class="songDate">3 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel3.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Beautiful Piano Music, Vol. 1 ~ Relaxing Music for Studying,...</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Soothing Relaxation</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">58M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel4.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">Peder B. Helland - Bright Future [Full Album]</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Peder B. Helland</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.9M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sidebar__relatedVideo">
+                <a href="#">
+                    <img src="./pictures/channel5.jpg" alt="Youtube channel picture">
+                </a>
+                <div class="sidebar__relatedVideo__songInfo">
+                    <a href="#">
+                        <div class="songTitle">BEAUTIFUL PIANO MUSIC | Emotional & Relaxing Music</div>
+                    </a>
+                    <a href="#">
+                        <div class="songChannel">Epic Music World</div>
+                    </a>
+                    <a href="#">
+                        <div class="songViews">2.3M views</div>
+                        <div>•</div>
+                        <div class="songDate">2 years ago</div>
+                    </a>
+                </div>
+            </div>
         </aside>
     </div>
 
