--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="pictures/menu-icon.png" alt="" id="menu-icon">
+        <a href="#">
+            <svg viewbox='0 0 24 24' id="menu-icon">
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+            </svg>
         </a>
         <a href="https://www.youtube.com/">
             <img src="pictures/youtube-icon.png" alt="" id="youtube-icon">
@@ -23,25 +25,34 @@
             <form class="searchbar">
                 <input type="text" name="" class="searchbar__input" placeholder="Search">
                 <button class="searchbar__btn">
-                   
-                    <img src="./pictures/magnifying-glass.svg" alt="">
+                    <svg viewbox='0 0 24 24'>
+                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                    </svg>
                 </button>
             </form>
         </div>
         
         <div class="headerRight-btns">
             <button id="makeVid">
-                <img src="./pictures/make-video.png" alt="">
+                <svg viewbox='0 0 24 24'>
+                    <path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4zM14 13h-3v3H9v-3H6v-2h3V8h2v3h3v2z"></path>
+                </svg>
+               <!--  <img src="./pictures/make-video.png" alt=""> -->
             </button>
             <button>
-                <img src="./pictures/youtube-apps.png" alt="">
+                <svg viewbox='0 0 24 24'>
+                    <path d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"></path>
+                </svg>
             </button>
             <button>
-                <img src="./pictures/setting.png" alt="">
+                <svg viewbox='0 0 24 24'>
+                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path>
+                </svg>
             </button>
-   
             <button id="signIn">
-                <img src="./pictures/signin-icon.png" alt="">
+                <svg viewbox='0 0 24 24'>
+                    <path d="M12,0 C18.62375,0 24,5.37625 24,12 C24,18.62375 18.62375,24 12,24 C5.37625,24 0,18.62375 0,12 C0,5.37625 5.37625,0 12,0 Z M12,10.63625 C13.66,10.63625 15,9.29625 15,7.63625 C15,5.97625 13.66,4.63625 12,4.63625 C10.34,4.63625 9,5.97625 9,7.63625 C9,9.29625 10.34,10.63625 12,10.63625 Z M12,12.40875 C8.33375,12.40875 5.455,14.18125 5.455,15.8175 C6.84125,17.95 9.26875,19.3625 12,19.3625 C14.73125,19.3625 17.15875,17.95 18.545,15.8175 C18.545,14.18125 15.66625,12.40875 12,12.40875 Z"></path>
+                </svg>
                 <div>Sign In</div>
             </button>
         </div>
