Added youtube favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styling/header.css">
     <link rel="stylesheet" href="./styling/body.css">
     <link rel="stylesheet" href="./styling/sidebar.css">
+    <link rel="icon" href="./pictures/youtube-favicon.png">
     <title>Youtube Clone</title>
 </head>
 <body>
